feat(build) : add api platform

--- a/.env
+++ b/.env
@@ -44,3 +44,7 @@ MAILER_DSN=null://null
 MARVEL_PUBLIC_KEY=ta_cle_publique
 MARVEL_PRIVATE_KEY=ta_cle_privee
 
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+###< nelmio/cors-bundle ###
