--- a/config/services.yaml
+++ b/config/services.yaml
@@ -24,13 +24,13 @@ services:
             $publicKey: '%env(MARVEL_PUBLIC_KEY)%'
             $privateKey: '%env(MARVEL_PRIVATE_KEY)%'
 
-    App\Service\ElasticClientService:
+    App\Service\ElasticSearchServices\ElasticClientService:
         arguments:
             $elasticHost: '%env(ELASTICSEARCH_HOST)%'
 
-    App\Service\ElasticIndexService:
+    App\Service\ElasticSearchServices\ElasticIndexService:
         arguments:
-            $elasticClientService: '@App\Service\ElasticClientService'
+            $elasticClientService: '@App\Service\ElasticSearchServices\ElasticClientService'
 
     App\DataFixtures\:
         resource: '../src/DataFixtures'
