--- a/.env
+++ b/.env
@@ -27,6 +27,8 @@ APP_SECRET=
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 DATABASE_URL="mysql://remi:password@127.0.0.1:3307/MarvelExplorer?serverVersion=8.0"
 ELASTICSEARCH_HOST="http://127.0.0.1:9200"
+REDIS_URL=redis://redis:6379
+
 #DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
