--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -3,3 +3,10 @@ controllers:
         path: ../src/Controller/
         namespace: App\Controller
     type: attribute
+
+app_fallback:
+    path: /{any}
+    controller: App\Controller\Front\HomeFrontController::index
+    requirements:
+        any: ".+"
+
